# django-machine-learning-user-interface

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
src/: requirements.txt
src/config/: settings.py  urls.py
src/input/: forms.py  params.py
src/interface/: apps.py  urls.py  views.py
src/templates/: base.html
src/templates/interface/: index.html
src/templates/snippets/: base_css.html
