[metadata]
name = django-machine-learning-user-interface
version = 0.0.0.17
author = Phikolomzi Gugwana
author_email = ggwphi001@myuct.ac.za
maintainer = Phikolomzi Gugwana
maintainer_email = ggwphi001@myuct.ac.za
description = A package to help developers build front end user interfaces for machine learning models.
long_description = file:README.rst
url = https://github.com/Phikolomzi-Gugwana/django-machine-learning-user-interface.git
license = BSD License
keywords = python django machine-learning user-interface
classifiers = 
    License :: OSI Approved :: BSD License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: